FreeST/test/Programs/ValidTests/Functional/BlockCommentInSig/BlockCommentInSig.fst
f : ()
f {- comment -} = ()

main : ()
main {- comment -} = ()
